--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,6 @@ Encoding: UTF-8
 RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE)
 LazyData: true
-VignetteBuilder: knitr
 Depends:
     R (>= 2.10)
 Imports:
@@ -24,7 +23,9 @@ Imports:
     fs (>= 1.2.0),
     glue (>= 1.2.0),
     httr (>= 1.3.1),
+    jsonlite (>= 1.5),
     tibble (>= 1.4.2),
+    readr (>= 1.1.1),
     purrr (>= 0.2.4)
 Suggests: 
     testthat
