Support cryptocurrencies. Refactor a bit. Add and update documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,10 @@ export(riingo_browse_documentation)
 export(riingo_browse_signup)
 export(riingo_browse_token)
 export(riingo_browse_usage)
+export(riingo_crypto_latest)
+export(riingo_crypto_meta)
+export(riingo_crypto_prices)
+export(riingo_crypto_quote)
 export(riingo_get_token)
 export(riingo_latest)
 export(riingo_latest_iex)
