--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ Imports:
     httr (>= 1.3.1),
     jsonlite (>= 1.5),
     tibble (>= 1.4.2),
+    rlang (>= 0.2.0),
     purrr (>= 0.2.4)
 Suggests: 
     testthat
