Rename iex functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,12 +11,12 @@ export(riingo_crypto_meta)
 export(riingo_crypto_prices)
 export(riingo_crypto_quote)
 export(riingo_get_token)
+export(riingo_iex_latest)
+export(riingo_iex_prices)
+export(riingo_iex_quote)
 export(riingo_latest)
-export(riingo_latest_iex)
 export(riingo_meta)
 export(riingo_prices)
-export(riingo_prices_iex)
-export(riingo_quote_iex)
 export(riingo_set_token)
 export(supported_tickers)
 importFrom(crayon,green)
