--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,7 @@ Depends:
     R (>= 2.10)
 Imports:
     crayon (>= 1.3.4),
+    dplyr,
     glue (>= 1.3.1),
     httr (>= 1.3.1),
     jsonlite (>= 1.5),
