Add safety catch for `riingo_prices()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,4 +20,5 @@ export(riingo_prices)
 export(riingo_set_token)
 export(supported_tickers)
 importFrom(crayon,green)
+importFrom(crayon,italic)
 importFrom(crayon,yellow)
