--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,13 +22,13 @@ Depends:
     R (>= 2.10)
 Imports:
     crayon (>= 1.3.4),
-    dplyr (>= 0.7.4),
     glue (>= 1.3.1),
     httr (>= 1.3.1),
     jsonlite (>= 1.5),
     purrr (>= 0.2.4),
     rlang (>= 0.2.0),
-    tibble (>= 1.4.2)
+    tibble (>= 1.4.2),
+    vctrs (>= 0.3.0)
 Suggests: 
     covr,
     testthat
