Add package doc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(riingo_meta)
 export(riingo_prices)
 export(riingo_set_token)
 export(supported_tickers)
+import(rlang)
 importFrom(crayon,green)
 importFrom(crayon,italic)
 importFrom(crayon,yellow)
