--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Imports:
     purrr (>= 0.2.4),
     rlang (>= 0.2.0),
     tibble (>= 1.4.2),
-    vctrs (>= 0.3.0)
+    vctrs (>= 0.3.0),
+    withr
 Suggests: 
     covr,
     testthat
