--- a/.github/workflows/R-CMD-check-cron.yaml
+++ b/.github/workflows/R-CMD-check-cron.yaml
@@ -19,11 +19,11 @@ jobs:
           - {os: windows-latest, r: 'release'}
 
     env:
-      # Turn off all mocking and just run the test suite
-      RIINGO_MOCK_TYPE: 'none'
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       RSPM: ${{ matrix.config.rspm }}
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      RIINGO_TOKEN: ${{ secrets.RIINGO_TOKEN }}
+      RIINGO_MOCK_TYPE: 'none' # Turn off all mocking and just run the test suite
 
     steps:
       - uses: actions/checkout@v2
