Do limited testing on pushes. Set coverage job to be cron based

--- a/.github/workflows/test-coverage-cron.yaml
+++ b/.github/workflows/test-coverage-cron.yaml
@@ -1,15 +1,12 @@
 on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+  schedule:
+    # Run tests every Tuesday at 1pm. Likely time for market to be open.
+    - cron:  '0 13 * * 2'
 
-name: test-coverage
+name: test-coverage-cron
 
 jobs:
-  test-coverage:
+  test-coverage-cron:
     runs-on: macOS-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
