Add support for the fundamentals endpoint. Closes #13.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,10 @@ export(riingo_crypto_latest)
 export(riingo_crypto_meta)
 export(riingo_crypto_prices)
 export(riingo_crypto_quote)
+export(riingo_fundamentals_definitions)
+export(riingo_fundamentals_meta)
+export(riingo_fundamentals_metrics)
+export(riingo_fundamentals_statements)
 export(riingo_get_token)
 export(riingo_iex_latest)
 export(riingo_iex_prices)
