Add `riingo_news()`. Closes #11.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(riingo_iex_prices)
 export(riingo_iex_quote)
 export(riingo_latest)
 export(riingo_meta)
+export(riingo_news)
 export(riingo_prices)
 export(riingo_set_token)
 export(supported_tickers)
