--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(riingo_fundamentals_definitions)
 export(riingo_fundamentals_meta)
 export(riingo_fundamentals_metrics)
 export(riingo_fundamentals_statements)
+export(riingo_fx_prices)
 export(riingo_get_token)
 export(riingo_iex_latest)
 export(riingo_iex_prices)
