--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(riingo_fundamentals_meta)
 export(riingo_fundamentals_metrics)
 export(riingo_fundamentals_statements)
 export(riingo_fx_prices)
+export(riingo_fx_quote)
 export(riingo_get_token)
 export(riingo_iex_latest)
 export(riingo_iex_prices)
